style.css
/* ... */
#content .woocommerce-breadcrumb::before {
    content:"\f041";
    font-family:"FontAwesome";
    font-size:1em;
    color:#096cc8;
    margin:0 0.5em 0 1em;
}
#content .woocommerce-result-count {
    margin:0 0 0 0.625em;
}
h1.woocommerce-products-header__title {
    font-size:2.2em;
    font-weight:100;
    padding:0 0 0 0.5em;
}
h1.woocommerce-products-header__title::before {
    content:"\f001";
    font-family:"FontAwesome";
    font-size:1em;
    float:left;
    width:45px;
    color:#fdd207;
}
h1.book::before {
    content:"\f02d";
    font-family:"FontAwesome";
    font-size:1em;
    float:left;
    width:45px;
    color:#fdd207;
}
h1.video::before {
    content:"\f03d";
    font-family:"FontAwesome";
    font-size:1em;
    float:left;
    width:55px;
    color:#fdd207;
}
h1.sale::before {
    content:"\f12a";
    font-family:"FontAwesome";
    font-size:1em;
    float:left;
    width:30px;
    color:#fdd207;
}
h1.merchandise::before {
    content:"\f1b3";
    font-family:"FontAwesome";
    font-size:1em;
    float:left;
    width:57px;
    color:#fdd207;
}
.widget-area {
    width:26%;
    background:#FCFCFC;
    border-right:1px solid #ccc;
    border-bottom:1px solid #ccc;
    border-left:1px solid #ccc;
    border-top:0.375em solid #3385c3;
    float:right;
    margin:0em 0.8em 0 0;
}
.widget-area .widgetblock {
    padding:1em;
}
.widget-area .widgetblock h2 {
    font-size:1.4em;
    font-weight:500;
    color:#313131;
    border-bottom:5px solid #fdd207;
    padding:0 0 0.3em 0;
}
.widget-area .widgetblock:nth-child(1) h2::before {
    content:"\f218";
    font-family:"FontAwesome";
    padding:0 0.5em 0 0;
    font-size:1em;
}
.widget-area .widgetblock:nth-child(2) h2::before {
    content:"\f002";
    font-family:"FontAwesome";
    padding:0 0.5em 0 0;
    font-size:1em;
}
.widget-area .widgetblock:nth-child(3) h2::before {
    content:"\f0fe";
    font-family:"FontAwesome";
    padding:0 0.5em 0 0;
    font-size:0.9em;
}
.widget-area .widgetblock:nth-child(3) h2 {
    font-size:1.3em;
}
.widget-area .widgetblock .widget_shopping_cart_content .buttons .wc-forward {
    border:1px solid #ccc;
    padding:0.5em;
}
.widget-area .widgetblock .widget_shopping_cart_content .buttons .wc-forward::after {
    content:"\f0da";
    font-family:"FontAwesome";
    padding:0 0 0 0.535em;
    font-size:0.925em;
    color:#3385c3;
}
.widget-area .widgetblock .widget_shopping_cart_content .buttons .checkout {
    border:1px solid #ccc;
    padding:0.5em;
    background:#3385c3;
    color:white;
}
.widget-area .widgetblock .widget_shopping_cart_content .buttons .checkout:hover {
    text-decoration:none;
}
.widget-area .widgetblock .widget_shopping_cart_content .buttons .checkout::after {
    content:"\f0da";
    font-family:"FontAwesome";
    padding:0 0 0 0.535em;
    font-size:0.925em;
    color:white;
}
.widget-area .widgetblock .widget_shopping_cart_content .product_list_widget .mini_cart_item img {
    margin:0 6em 0 0;
}
.widget-area .widgetblock .widget_shopping_cart_content .product_list_widget .mini_cart_item .remove {
    color:red;
    font-weight:900;
}
.widget-area .widgetblock .product-categories li {
    margin:0 0 0.5em 0;
}
.widget-area .widgetblock .product-categories li a {
    font-size:1.2em;
}
#content_left {
    padding:0 1em;
}
#content_left #header, #content_full #header {
    float:left;
    width:100%;
    background:#096cc8;
    border-bottom:0.375em solid #3385c3;
    padding:1.5em 0;
    margin:0 0 1em 0;
}
#content_left #header h2, #content_full #header h2 {
    font-size:1.4em;
    color:white;
    font-weight:100;
    margin:0 0 0 1em;
}
#content_left #breadcrumb, #content_full #breadcrumb {
    float:left;
    width:100%;
    margin:0 0 0.3em 0;
}
#content_left #breadcrumb p, #content_full #breadcrumb p {
    font-size:1em;
    padding:0;
    margin:0;
}
#content_left #breadcrumb p::before, #content_full #breadcrumb p::before {
    content:"\f041";
    font-family:"FontAwesome";
    font-size:1em;
    color:#096cc8;
    margin:0 0.5em 0 1em;
}
#content #social_share {
    float:left;
    display:block;
    margin:0 0 1em 0;
    padding:0.5em;
    background:rgba(51, 133, 195, 0.3);
    width:100%;
    height:21px;
}
#content #social_share ul {
    list-style-type:none;
    margin:auto;
    display:table;
    padding:0;
}
#content #social_share ul li {
    float:left;
    display:inline;
    padding:0 1em 0 0;
}
#content #social_share ul li a {
    color:white;
}
#content #social_share ul li:nth-child(1) {
    min-width:84px;
}
#content #social_share ul li:nth-child(2) {
    min-width:60px;
}
#content #social_share .share_email_button {
    background:#096cc8;
    padding:0.2em 1em;
    color:white;
    text-decoration:none;
    font-size:0.8em;
}
#content_left .woocommerce {
    float:left;
    width:100%;
}
#content_left .woocommerce .woocommerce-MyAccount-navigation {
    float:left;
    width:25%;
}
#content_left .woocommerce .woocommerce-MyAccount-content {
    float:right;
    width:70%;
}
#content .product .onsale {
    background:#fdd207;
    color:red;
    font-size:1.1em;
    padding:1.1em;
    -webkit-border-radius:2.8em;
    -moz-border-radius:2.8em;
    border-radius:2.8em;
    position:relative;
    margin:-0.625em 0 0 -63px;
    font-weight:500;
}
    /*-------------------------------------------------------------
     # Contact Page
    --------------------------------------------------------------*/
#content_full {
    width:100%;
    display:block;
    float:left;
}
#content_full #top_quote {
    background:#F8F8F8;
    width:95%;
    margin:0 auto 1em auto;
    display:table;
    padding:1em 0;
}
#content_full #top_quote p {
    padding:0 1em 1em 1em;
    margin:0;
    font-size:1.3em;
    font-style:italic;
    line-height:1.3em;
    color:#04435d;
}
#content_full #top_quote .quote {
    float:left;
    margin:0.6em;
    font-size:2.5em;
    color:#096cc8;
}
/* ... */

